# seafoam

./: .gitignore  Cargo.toml  README.md  Roadmap.md  build.rs
.github/workflows/: rust.yml
locust/: locustfile.py
proto/: seafoam.proto
src/: client.rs  lib.rs  main.rs  query.rs  raft.rs
src/raft/: data.rs  log.rs  requests.rs  responses.rs
