[package]
name = "seafoam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "seafoam-server"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "seafoam-client"
path = "src/client.rs"



[dependencies]

anyhow = "1.0"

hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
flashmap = "0.1.0"
rand = "0.8.5"
tonic = "0.11.0"
prost = "0.12"
mio = "0.8.11"

[build-dependencies]
tonic-build = "0.11"
